--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16,6 +16,10 @@
   background-color: #e0e0e0 !important;
 }
 
+.fondo-tables{
+  background-color: #f8f8f8 !important;
+}
+
 .fondo-accesorios{
   background-color: #f5f5f5;
 }
