--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -169,8 +169,9 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
-  font-family: 'Numans', sans-serif;
-  font-size: 0.8rem;
+  /* font-family: 'Numans', sans-serif; */
+  font-family: Consolas,monaco,monospace; 
+  font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.5;
   color: rgb(0, 0, 0);
